# dotfiles_public

./: .chezmoiignore  .gitattributes  .gitignore  README.md  bootstrap.sh  dot_bash_profile  dot_zshrc  empty_dot_bashrc  publish.sh
.dotfiles/: .dotfiles_key.txt  chezmoi.toml  init.sh  update.sh
.dotfiles/linux/: init.sh  install_apt.sh  update.sh
.dotfiles/mac/: Brewfile  Brewfile.lock.json  UI_Brewfile  UI_Brewfile.lock.json  init.sh  update.sh
.dotfiles/node/: init.sh
.dotfiles/python/: install.sh  install_pipx_packages.sh  requirements.txt  x_requirements.txt
.dotfiles/rust/: install.sh  requirements.txt
.dotfiles/scripts/: croc_installer.sh  init_mamba.sh  install_age.sh  install_bitwarden.sh  install_brew_user.sh  install_croc.sh  install_fisher.fish  install_helix.sh  install_rust.sh  install_tshare.sh  login_bitwarden.sh
cli/: PLAN.md  pyproject.toml
cli/src/dotfiles_cli/: __init__.py  cli.py  config.py
cli/src/dotfiles_cli/commands/: __init__.py  bootstrap.py  completions.py  git_cmds.py  hooks.py  pkg.py  platform.py  remote.py  scripts.py  sync.py  templates.py  update.py  utils.py  validate.py
cli/src/dotfiles_cli/files/: __init__.py  copier.py  linker.py  manifest.py
cli/src/dotfiles_cli/utils/: __init__.py  console.py  git.py  run.py
config/: files.yaml  packages.lock.yaml  packages.yaml  publish.yaml
dot_SpaceVim.d/: README.md  init.toml
dot_config/: starship.toml  trex.yaml
dot_tmuxp/: base.yml
scripts/: bootstrap.sh  init_git_delta.sh  install_fisher.fish  install_helix.sh  install_helix_gpt.sh  install_rust.sh
(+64 files in other folders)
